--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
